# sator

./: .gitignore  LICENSE  README.md  pyproject.toml  sator  todo.md
.github/workflows/: test.yml
doc/: audit.md  refactor_plan.md
sator/: __init__.py  __main__.py  cli.py  exclude.py  filter.py  indexer.py  iso_langs.py  language.py  process.py  qb_client.py  quality.py  size.py  title.py  tmdb.py  wikidata.py
tests/: test_cli.py  test_enrich.py  test_exclude.py  test_filter_blacklist.py  test_format.py  test_integration.py  test_new_indexers.py  test_scoring.py  test_wikidata.py
