[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sator"
version = "0.3.0"
description = "Search And TORrent — multi-tracker torrent search tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["torrent", "search", "bittorrent", "tracker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bortoq/sator"

[project.scripts]
sator = "sator.cli:main"

[tool.setuptools.packages.find]
include = ["sator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
